# sync-rs

./: .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  overlay.nix  package.nix
.github/workflows/: audit.yaml  ci.yaml  docker.yaml
nix/: docker.nix  module.nix  overlay.nix  package.nix
src/: client.rs  integration_tests.rs  main.rs  session.rs
