[package]
name = "sync"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
parity-ws = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enum_dispatch = "0.3"

[dev-dependencies]
maplit = "1"
portpicker = "0.1"
websocket-lite = "0.5"
better-panic = "0.3"
