[package]
name = "sync"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = { version = "0.1.17", features = ["net"]}
tokio-tungstenite = "0.26.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
main_error = "0.1.2"
futures-channel = "0.3.31"
futures-util = "0.3.31"
real-ip = "0.1.0"
